--- a/Team_XX_Assignment.ipynb
+++ b/Team_XX_Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
    "source": [
     "## Group Assignment\n",
     "### Team Number: XX\n",
-    "### Team Member Names:\n",
+    "### Team Member Names: Jason, Patrick, Gateek\n",
     "### Team Strategy Chosen: Market Beat"
    ]
   },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,9 +204,7 @@
     "    multi_data.dropna(subset=appended_tickers, inplace=True)\n",
     "\n",
     "    # Get CAD->USD exchange rate\n",
-    "    cadusd = yf.download('CAD=x', start='2024-11-08', end=end, interval='1d')\n",
-    "    # Get Close price from most recent trading day\n",
-    "    exchange_rate = cadusd.iloc[-1, 3]\n",
+    "    cadusd = yf.download('CAD=x', start=start, end=end, interval='1d')\n",
     "\n",
     "    # convert everything to CAD\n",
     "    for ticker in appended_tickers:\n",
@@ -214,15 +212,14 @@
     "        info = stock.fast_info\n",
     "\n",
     "        if info['currency'] == 'USD':\n",
-    "            multi_data[ticker] = multi_data[ticker] * exchange_rate\n",
+    "            multi_data[ticker] = multi_data[ticker] * cadusd['Close']\n",
     "    \n",
     "    return multi_data\n",
     "\n",
-    "start = '1980-11-09'\n",
-    "end = '2024-11-23'\n",
-    "cutoff = '1989-01-01'\n",
-    "\n",
-    "close_prices = get_close_prices(start, end, valid_tickers, cutoff)"
+    "start = '2015-01-01'\n",
+    "end = '2024-11-24'\n",
+    "cutoff = '2019-01-01'\n",
+    "get_close_prices(start, end, valid_tickers, cutoff)\n"
    ]
   },
   {
