--- a/Team_XX_Assignment.ipynb
+++ b/Team_XX_Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +69,10 @@
     "def valid_stocks(tickers_file):\n",
     "    # Read CSV and get tickers\n",
     "    tickers_df = pd.read_csv(tickers_file)\n",
+    "\n",
+    "    if tickers_df.empty:\n",
+    "        return\n",
+    "\n",
     "    tickers_df.columns = (['Tickers'])\n",
     "    tickers_list = tickers_df['Tickers'].tolist()\n",
     "\n",
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,9 +221,88 @@
     "    return multi_data\n",
     "\n",
     "start = '2015-01-01'\n",
-    "end = '2024-11-24'\n",
+    "end = '2024-11-22'\n",
     "cutoff = '2019-01-01'\n",
-    "get_close_prices(start, end, valid_tickers, cutoff)\n"
+    "close_prices = get_close_prices(start, end, valid_tickers, cutoff)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### LAST STEP: BUY SHARES AND GENERATE PORTFOLIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999989.147508442 99.99989999999997\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buy_shares(weightings_df, prices_df):\n",
+    "\n",
+    "    cash = 1000000\n",
+    "    flat_fee = 3.95\n",
+    "    fee_per_share = 0.001\n",
+    "\n",
+    "    weightings_df['Close Price'] = prices_df.reindex(weightings_df.index)\n",
+    "\n",
+    "    # 1: Calculate the initial investment of each stock and the amount of shares\n",
+    "    weightings_df['Investment Amt'] = cash * (weightings_df['Weight'] / 100)\n",
+    "    weightings_df['Shares'] = weightings_df['Investment Amt'] / weightings_df['Close Price']\n",
+    "\n",
+    "    # 2: Calculate the fees based on what kind of fee structure is cheaper\n",
+    "    weightings_df['fees'] = np.minimum(weightings_df['Shares'] * fee_per_share, flat_fee)\n",
+    "\n",
+    "    # 3: Calculate total investment with fees added\n",
+    "    weightings_df['Investment with fees'] = weightings_df['Shares'] * weightings_df['Close Price'] + weightings_df['fees']\n",
+    "    total_with_fees = weightings_df['Investment with fees'].sum()\n",
+    "\n",
+    "    # 4: Adjust investment to keep the total under the budget\n",
+    "    adjustment_factor = cash / total_with_fees\n",
+    "    weightings_df['Adjusted Investment Amt'] = weightings_df['Investment Amt'] * adjustment_factor\n",
+    "    weightings_df['Adjusted Shares'] = weightings_df['Adjusted Investment Amt'] / weightings_df['Close Price']\n",
+    "\n",
+    "    # 5: Recalculate fees\n",
+    "    weightings_df['Adjusted fees'] = np.minimum(weightings_df['Adjusted Shares'] * fee_per_share, flat_fee)\n",
+    "\n",
+    "    # 6: Final investment for each stock\n",
+    "    weightings_df['Final Investment'] = weightings_df['Adjusted Shares'] * weightings_df['Close Price'] + weightings_df['Adjusted fees']\n",
+    "\n",
+    "    # Create Final Portfolio\n",
+    "    Portfolio_Final = pd.DataFrame()\n",
+    "    Portfolio_Final['Ticker'] = weightings_df.index\n",
+    "    Portfolio_Final.index = Portfolio_Final['Ticker']\n",
+    "    Portfolio_Final['Price'] = weightings_df['Close Price']\n",
+    "    Portfolio_Final['Currency'] = 'CAD' # NEED TO FIGURE OUT A WAY TO GET ACCURATE CURRENCY DATA\n",
+    "    Portfolio_Final['Shares'] = weightings_df['Adjusted Shares']\n",
+    "    Portfolio_Final['Value'] = weightings_df['Adjusted Investment Amt']\n",
+    "    Portfolio_Final['Weight'] = weightings_df['Weight']\n",
+    "\n",
+    "    Portfolio_Final.index = range(1, len(Portfolio_Final) + 1)\n",
+    "\n",
+    "    return Portfolio_Final\n",
+    "\n",
+    "weightings_df = pd.DataFrame()\n",
+    "weightings_df.index = valid_tickers\n",
+    "weights = [1.4999, 4.45, 1.34, 4.26, 4.23, 1.54, 1.45, 2.70, 1.85, 3.54, 4.43, 3.19, 1.39, 2.51, 3.72, 3.44, 4.43, 1.34, 3.98, 1.37, 4.14, 3.80, 1.38, 4.17, 1.61, 2.51, 2.39, 1.34, 2.27, 1.34, 1.34, 1.65, 4.21, 3.63, 4.46, 3.10]\n",
+    "weightings_df['Weight'] = weights\n",
+    "Portfolio_Final = buy_shares(weightings_df, close_prices.iloc[-1])\n",
+    "\n",
+    "#tests\n",
+    "total = Portfolio_Final['Value'].sum()\n",
+    "total_weight = Portfolio_Final['Weight'].sum()\n",
+    "print(total, total_weight)"
    ]
   },
   {
@@ -230,7 +313,7 @@
     "\n",
     "The following team members made a meaningful contribution to this assignment:\n",
     "\n",
-    "Insert Names Here."
+    "Gateek, Jason, Patrick."
    ]
   }
  ],
