--- a/Team_02_Assignment.ipynb
+++ b/Team_02_Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "## Group Assignment\n",
-    "### Team Number: XX\n",
+    "### Team Number: 02\n",
     "### Team Member Names: Jason, Patrick, Gateek\n",
     "### Team Strategy Chosen: Market Beat"
    ]
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,8 @@
     "        stock = yf.Ticker(ticker)\n",
     "        info = stock.fast_info\n",
     "\n",
-    "        if info['currency'] == 'USD':\n",
+    "        currency = info['currency']\n",
+    "        if currency == 'USD':\n",
     "            multi_data[ticker] = multi_data[ticker] * cadusd['Close']\n",
     "    \n",
     "    return multi_data\n",
@@ -227,29 +228,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### LAST STEP: BUY SHARES AND GENERATE PORTFOLIO"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "999989.147508442 99.99989999999997\n"
-     ]
-    }
-   ],
    "source": [
-    "def buy_shares(weightings_df, prices_df):\n",
+    "##### The following function determines the currency of each stock in our portfolio "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_currency(tickers):\n",
+    "    currencies = []\n",
+    "\n",
+    "    for ticker in tickers:\n",
+    "        stock = yf.Ticker(ticker)\n",
+    "        info = stock.fast_info\n",
+    "        currency = info['currency']\n",
+    "\n",
+    "        currencies.append({'Ticker': ticker, 'Currency': currency})\n",
+    "        \n",
+    "    df = pd.DataFrame(currencies)\n",
+    "    df.set_index('Ticker', inplace=True)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "currencies = get_currency(valid_tickers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The following function buys our stocks based on the determined weightings "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buy_shares(weightings_df, prices_df, currencies_df):\n",
     "\n",
     "    cash = 1000000\n",
     "    flat_fee = 3.95\n",
@@ -284,7 +313,7 @@
     "    Portfolio_Final['Ticker'] = weightings_df.index\n",
     "    Portfolio_Final.index = Portfolio_Final['Ticker']\n",
     "    Portfolio_Final['Price'] = weightings_df['Close Price']\n",
-    "    Portfolio_Final['Currency'] = 'CAD' # NEED TO FIGURE OUT A WAY TO GET ACCURATE CURRENCY DATA\n",
+    "    Portfolio_Final['Currency'] = currencies_df.reindex(Portfolio_Final.index)['Currency'] # NEED TO FIGURE OUT A WAY TO GET ACCURATE CURRENCY DATA\n",
     "    Portfolio_Final['Shares'] = weightings_df['Adjusted Shares']\n",
     "    Portfolio_Final['Value'] = weightings_df['Adjusted Investment Amt']\n",
     "    Portfolio_Final['Weight'] = weightings_df['Weight']\n",
@@ -297,8 +326,30 @@
     "weightings_df.index = valid_tickers\n",
     "weights = [1.4999, 4.45, 1.34, 4.26, 4.23, 1.54, 1.45, 2.70, 1.85, 3.54, 4.43, 3.19, 1.39, 2.51, 3.72, 3.44, 4.43, 1.34, 3.98, 1.37, 4.14, 3.80, 1.38, 4.17, 1.61, 2.51, 2.39, 1.34, 2.27, 1.34, 1.34, 1.65, 4.21, 3.63, 4.46, 3.10]\n",
     "weightings_df['Weight'] = weights\n",
-    "Portfolio_Final = buy_shares(weightings_df, close_prices.iloc[-1])\n",
-    "\n",
+    "Portfolio_Final = buy_shares(weightings_df, close_prices.iloc[-1], currencies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999989.1663796143 99.99989999999997\n"
+     ]
+    }
+   ],
+   "source": [
     "#tests\n",
     "total = Portfolio_Final['Value'].sum()\n",
     "total_weight = Portfolio_Final['Weight'].sum()\n",
