--- a/Jason.ipynb
+++ b/Jason.ipynb
@@ -9,6 +9,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LIBRARIES NEEDED\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,7 +26,7 @@
     "\n",
     "Firstly, we decided to plot out a portfolio that assigns random weightings to random stocks. We plot the returns on a scatter graph.\n",
     "\n",
-    "Note that the following code is only an example and is not coded to be dynamic. We include an implementation in the section after."
+    "Note that the following code is only an example and is not coded to be dynamic. We include a dynamic implementation in the section after."
    ]
   },
   {
