--- a/Jason.ipynb
+++ b/Jason.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Finding Weightings\n",
-    "In this section, we will try to find the optimal weightings with the stocks that have been chosen. We will be implementing ideas from Modern Portfolio Theory by using ideas from Ivanyuk and Berzin (2020). In the next section, we will go over the theory behind this model. Then, we will implement our ideas to create a portfolio that meets our needs."
+    "In this section, we will try to find the optimal weightings with the stocks that have been chosen. We will be implementing ideas from Modern Portfolio Theory. In the next section, we will go over the theory behind this model. Then, we will implement our ideas to create a portfolio that meets our needs."
    ]
   },
   {
@@ -756,16 +756,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# References\n",
-    "Ivanyuk, V., & Berzin, D. (2020). *An Algorithm for Constructing an Efficient Investment Portfolio*. In Advances in Intelligent \n",
-    "\n",
-    "&ensp; Systems and Computing (pp. 482–490). Springer International Publishing. https://doi.org/10.1007/978-3-030-63322-6_39\n"
-   ]
   },
   {
    "cell_type": "markdown",
