Add more doc and annualize sharpe ratio

--- a/Team_02_Assignment.ipynb
+++ b/Team_02_Assignment.ipynb
@@ -37,7 +37,12 @@
     "- numpy_financial\n",
     "- yfinance\n",
     "- matplotlib\n",
-    "- pypfopt"
+    "- pypfopt\n",
+    "\n",
+    "To install pypfopt, type\n",
+    "```\n",
+    "pip install PyPortfolioOpt\n",
+    "```"
    ]
   },
   {
