fixed all my functions

--- a/gateek.ipynb
+++ b/gateek.ipynb
@@ -662,6 +662,33 @@
     "Portfolio_Final = buy_shares(weightings_df, close_prices.iloc[-1])\n",
     "Portfolio_Final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_currency(tickers):\n",
+    "    currencies = []\n",
+    "\n",
+    "    for ticker in tickers:\n",
+    "        stock = yf.Ticker(ticker)\n",
+    "        info = stock.fast_info\n",
+    "        try:\n",
+    "            currency = info['currency']\n",
+    "        except:\n",
+    "            continue\n",
+    "\n",
+    "        currencies.append({'Ticker': ticker, 'Currency': currency})\n",
+    "        \n",
+    "    df = pd.DataFrame(currencies)\n",
+    "    df.set_index('Ticker', inplace=True)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "currencies = get_currency(valid_tickers)"
+   ]
   }
  ],
  "metadata": {
