--- a/gateek.ipynb
+++ b/gateek.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,58 +47,89 @@
     }
    ],
    "source": [
-    "\n",
-    "# valid_stocks(tickers_file) reads in a given tickers file and produces a list of tickers\n",
-    "#                            that are valid according to restrictions such as currency and \n",
-    "#                            average monthly volume.\n",
-    "# tickers_file: csv file with tickers \n",
     "def valid_stocks(tickers_file):\n",
-    "    # Read CSV and get tickers\n",
-    "    tickers_df = pd.read_csv(tickers_file)\n",
-    "    tickers_df.columns = (['Tickers'])\n",
-    "    tickers_list = tickers_df['Tickers'].tolist()\n",
+    "    \"\"\"\n",
+    "    Filters and returns a list of valid stock tickers based on specific restrictions:\n",
+    "    - The stock must trade in USD or CAD.\n",
+    "    - The stock must have an average monthly volume above 100,000 shares.\n",
+    "    - The stock must have at least 18 valid trading days per month.\n",
     "\n",
-    "    # Start and end dates\n",
+    "    Parameters:\n",
+    "        tickers_file (str): Path to a CSV file containing stock tickers under a column named 'Tickers'.\n",
+    "\n",
+    "    Returns:\n",
+    "        list of str: A list of valid stock tickers that meet the specified criteria.\n",
+    "\n",
+    "    Example:\n",
+    "        valid_tickers = valid_stocks('Tickers_Example.csv')\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Read CSV and extract tickers\n",
+    "    tickers_df = pd.read_csv(tickers_file)\n",
+    "\n",
+    "    if tickers_df.empty:  # If the file is empty, return nothing\n",
+    "        return []\n",
+    "    \n",
+    "    # Rename columns to ensure consistency\n",
+    "    first_stock = []\n",
+    "    first_stock.append(tickers_df.columns[0])\n",
+    "    rest_stock = tickers_df.iloc[:, 0].tolist()\n",
+    "    tickers_list = first_stock + rest_stock\n",
+    "\n",
+    "    # Define the date range for historical data\n",
     "    start = '2023-10-01'\n",
     "    end = '2024-09-30'\n",
     "\n",
-    "    valid_tickers = []\n",
+    "    valid_tickers = []  # List to store valid tickers\n",
     "\n",
+    "    # Process each ticker in the list\n",
     "    for ticker in tickers_list:\n",
-    "        # Loads in ticker info from yfinance\n",
+    "        # Load ticker info using yfinance\n",
     "        stock = yf.Ticker(ticker)\n",
-    "        info = stock.fast_info \n",
+    "        info = stock.fast_info\n",
     "\n",
-    "        # filter ticker by currency\n",
+    "        # Filter ticker by currency\n",
     "        try:\n",
     "            currency = info['currency']\n",
-    "        except:\n",
+    "        except Exception:  # Skip ticker if currency info is unavailable\n",
+    "            print(ticker, \" was removed because it either does not exist, or has been delisted\", sep='')\n",
     "            continue\n",
     "\n",
-    "        if currency != 'USD' and currency != 'CAD':\n",
+    "        if currency not in ['USD', 'CAD']:  # Only allow USD or CAD stocks\n",
+    "            print(ticker, \" was removed because it is not a Canadian or US stock.\", sep='')\n",
     "            continue\n",
     "\n",
-    "        #filter ticker by average monthly volume\n",
+    "        # Filter ticker by average monthly volume and trading days\n",
     "        try:\n",
     "            hist = stock.history(start=start, end=end, interval='1d')\n",
-    "        except:\n",
+    "            time.sleep(0.3)\n",
+    "        except Exception:  # Skip ticker if historical data is unavailable\n",
+    "            print(ticker, \" was removed because it either does not exist, or has been delisted\", sep='')\n",
     "            continue\n",
+    "\n",
+    "        # Calculate monthly trading statistics\n",
     "        monthly_volume = pd.DataFrame()\n",
     "        monthly_volume['volume'] = hist['Volume'].resample('ME').sum()\n",
     "        monthly_volume['count'] = hist['Volume'].resample('ME').count()\n",
     "        monthly_volume['avg monthly volume'] = monthly_volume['volume'] / monthly_volume['count']\n",
+    "\n",
+    "        # Check for months with insufficient trading days or low average volume\n",
     "        invalid_trading_days = monthly_volume[monthly_volume['count'] < 18]\n",
     "        invalid_monthly_vol = monthly_volume[monthly_volume['avg monthly volume'] < 100000]\n",
     "\n",
+    "        # Skip tickers that fail the volume or trading day criteria\n",
     "        if len(invalid_monthly_vol) > 0 or len(invalid_trading_days) > 0:\n",
+    "            print(ticker, \" was removed because it does not have a monthly trading volume of 100,000 or a valid amount of trading days.\", sep='')\n",
     "            continue\n",
     "\n",
-    "\n",
+    "        # Add valid ticker to the list\n",
     "        valid_tickers.append(ticker)\n",
     "\n",
     "    return valid_tickers\n",
     "\n",
-    "valid_tickers = valid_stocks('Tickers_Example.csv')"
+    "# Example usage\n",
+    "valid_tickers = valid_stocks('Tickers_Example.csv')\n",
+    "print(\"Here all all the tickers that passed the valid requirements associated with the assignment details: \", valid_tickers, sep='')"
    ]
   },
   {
@@ -151,55 +182,85 @@
     }
    ],
    "source": [
-    "#get_close_prices(start, end, tickers, cutoff) retrieves all close prices for stocks in tickers from a start date\n",
-    "#                                              to an end date. It also takes in a cutoff that excludes all stocks\n",
-    "#                                              that do not have close price data before this cutoff date. Function \n",
-    "#                                              will return all close prices for the valid stocks in CAD starting from the \n",
-    "#                                              date at which the youngest valid stock began tracking close prices.\n",
-    "# Example: get_close_prices('2020-01-01', '2024-01-01', ['AAPL', 'NVDA'], '2022-01-01')\n",
-    "# Restrictions:\n",
-    "#       * start < cutoff < end\n",
     "def get_close_prices(start, end, tickers, cutoff):\n",
+    "    \"\"\"\n",
+    "    Retrieves historical close prices for specified stocks and converts them to CAD.\n",
+    "    Filters out stocks that do not have data available before the cutoff date. The returned \n",
+    "    data starts from the date when the youngest valid stock began tracking close prices.\n",
     "\n",
-    "    multi_data = pd.DataFrame()\n",
-    "    df = []\n",
-    "    appended_tickers = []\n",
+    "    Parameters:\n",
+    "        start (str): The start date for fetching historical data (format: 'YYYY-MM-DD').\n",
+    "        end (str): The end date for fetching historical data (format: 'YYYY-MM-DD').\n",
+    "        tickers (list of str): A list of stock ticker symbols to fetch data for.\n",
+    "        cutoff (str): The cutoff date (format: 'YYYY-MM-DD'). Stocks without data before this date are excluded.\n",
     "\n",
-    "    # loop through tickers \n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame containing the close prices of valid stocks (in CAD), starting from\n",
+    "                      the earliest available date for all valid stocks.\n",
+    "\n",
+    "    Restrictions:\n",
+    "        - `start` must be less than `cutoff`, and `cutoff` must be less than `end`.\n",
+    "\n",
+    "    Example:\n",
+    "        close_prices = get_close_prices('2020-01-01', '2024-01-01', ['AAPL', 'NVDA'], '2022-01-01')\n",
+    "    \"\"\"\n",
+    "\n",
+    "    multi_data = pd.DataFrame()  # Final DataFrame to hold valid tickers\n",
+    "    df = []  # Temporary list to hold individual stock close price series\n",
+    "    appended_tickers = []  # List of valid tickers that meet the cutoff condition\n",
+    "\n",
+    "    # Loop through tickers\n",
     "    for ticker in tickers:\n",
-    "        # get all data and put into a series\n",
+    "        # Get historical data for the ticker\n",
     "        data = yf.download(ticker, start=start, end=end, interval='1d')\n",
+    "        time.sleep(0.3)\n",
     "        close = data['Close']\n",
-    "        close = close.rename(ticker)\n",
+    "       #close = close.rename(ticker)  # Rename series to match the ticker symbol\n",
     "\n",
-    "        # if the first close price is less than cutoff\n",
+    "        # Check if the stock has data before the cutoff date\n",
     "        if close.index.min() < pd.Timestamp(cutoff):\n",
-    "            # add stock close prices to df\n",
+    "            # Add the stock's close prices to the list\n",
     "            df.append(close)\n",
     "            appended_tickers.append(ticker)\n",
+    "        else:\n",
+    "            print(ticker, \" was removed because it did not exist before \", cutoff,  sep='')\n",
     "\n",
-    "    # create df with all the data\n",
+    "    # Combine all valid stock close prices into a single DataFrame\n",
     "    multi_data = pd.concat(df, axis=1)\n",
-    "    #drop all values so that there are valid data points for each date in the index\n",
+    "\n",
+    "    # Drop rows with missing data to ensure consistent data points for all tickers\n",
     "    multi_data.dropna(subset=appended_tickers, inplace=True)\n",
     "\n",
-    "    # Get CAD->USD exchange rate\n",
-    "    cadusd = yf.download('CAD=x', start=start, end=end, interval='1d')\n",
+    "    # Get CAD to USD exchange rate data\n",
+    "    cadusd = yf.download('CAD=X', start=start, end=end, interval='1d')\n",
+    "    time.sleep(0.3)\n",
+    "    aligned_cadusd = cadusd.reindex(multi_data.index, method='ffill')\n",
+    "    aligned_cadusd_close = aligned_cadusd['Close'].reindex(multi_data.index)\n",
     "\n",
-    "    # convert everything to CAD\n",
+    "    # Convert all stock prices to CAD\n",
     "    for ticker in appended_tickers:\n",
     "        stock = yf.Ticker(ticker)\n",
     "        info = stock.fast_info\n",
     "\n",
-    "        if info['currency'] == 'USD':\n",
-    "            multi_data[ticker] = multi_data[ticker] * cadusd['Close']\n",
+    "        # Check the currency of the stock\n",
+    "        currency = info['currency']\n",
+    "        if currency == 'USD':  # If the stock is in USD, convert it to CAD\n",
+    "            combined = pd.concat([multi_data[ticker], aligned_cadusd_close], axis=1).dropna()\n",
+    "            # convert USD to CAD\n",
+    "            multi_data[ticker] = combined.iloc[:, 0] * combined.iloc[:, 1]\n",
+    "            #multi_data[ticker] = multi_data[ticker] * aligned_cadusd['Close']\n",
+    "            break\n",
     "    \n",
     "    return multi_data\n",
     "\n",
+    "# Example usage\n",
     "start = '2015-01-01'\n",
-    "end = '2024-11-23'\n",
+    "end = '2024-11-22'\n",
     "cutoff = '2019-01-01'\n",
-    "close_prices = get_close_prices(start, end, valid_tickers, cutoff)\n"
+    "close_prices = get_close_prices(start, end, valid_tickers, cutoff)\n",
+    "valid_tickers = close_prices.columns\n",
+    "\n",
+    "display(close_prices)\n"
    ]
   },
   {
@@ -612,55 +673,79 @@
    ],
    "source": [
     "def buy_shares(weightings_df, prices_df):\n",
+    "    \"\"\"\n",
+    "    Allocates a fixed cash amount to a portfolio of stocks based on their target weightings, \n",
+    "    considering transaction fees, and returns a final portfolio with adjusted investments.\n",
     "\n",
-    "    cash = 1000000\n",
-    "    flat_fee = 3.95\n",
-    "    fee_per_share = 0.001\n",
+    "    Parameters:\n",
+    "        weightings_df (pd.DataFrame): DataFrame with stock tickers as index and a column `Weight` representing \n",
+    "                                      the target percentage allocation for each stock.\n",
+    "        prices_df (pd.Series): Series with stock tickers as index and their respective close prices.\n",
+    "        currencies_df (pd.DataFrame): DataFrame with stock tickers as index and a `Currency` column \n",
+    "                                       indicating the trading currency of each stock.\n",
     "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame containing the final portfolio allocation:\n",
+    "                      - Ticker: Stock tickers\n",
+    "                      - Price: Closing price of each stock\n",
+    "                      - Currency: Trading currency of each stock\n",
+    "                      - Shares: Adjusted number of shares purchased for each stock\n",
+    "                      - Value: Adjusted investment amount for each stock\n",
+    "                      - Weight: Target weight percentage for each stock\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Constants for cash amount and transaction fees\n",
+    "    cash = 1000000  # Total cash available for investment\n",
+    "    flat_fee = 3.95  # Flat transaction fee per stock\n",
+    "    fee_per_share = 0.001  # Fee per share\n",
+    "\n",
+    "    # 1: Retrieve close prices and calculate initial investment amounts and shares\n",
     "    weightings_df['Close Price'] = prices_df.reindex(weightings_df.index)\n",
-    "\n",
-    "    # 1: Calculate the initial investment of each stock and the amount of shares\n",
     "    weightings_df['Investment Amt'] = cash * (weightings_df['Weight'] / 100)\n",
     "    weightings_df['Shares'] = weightings_df['Investment Amt'] / weightings_df['Close Price']\n",
     "\n",
-    "    # 2: Calculate the fees based on what kind of fee structure is cheaper\n",
+    "    # 2: Calculate transaction fees, choosing the cheaper of the flat fee or per-share fee\n",
     "    weightings_df['fees'] = np.minimum(weightings_df['Shares'] * fee_per_share, flat_fee)\n",
     "\n",
-    "    # 3: Calculate total investment with fees added\n",
+    "    # 3: Calculate total investment including fees\n",
     "    weightings_df['Investment with fees'] = weightings_df['Shares'] * weightings_df['Close Price'] + weightings_df['fees']\n",
     "    total_with_fees = weightings_df['Investment with fees'].sum()\n",
     "\n",
-    "    # 4: Adjust investment to keep the total under the budget\n",
+    "    # 4: Adjust investments to stay within the cash budget\n",
     "    adjustment_factor = cash / total_with_fees\n",
     "    weightings_df['Adjusted Investment Amt'] = weightings_df['Investment Amt'] * adjustment_factor\n",
     "    weightings_df['Adjusted Shares'] = weightings_df['Adjusted Investment Amt'] / weightings_df['Close Price']\n",
     "\n",
-    "    # 5: Recalculate fees\n",
+    "    # 5: Recalculate fees based on adjusted shares\n",
     "    weightings_df['Adjusted fees'] = np.minimum(weightings_df['Adjusted Shares'] * fee_per_share, flat_fee)\n",
     "\n",
-    "    # 6: Final investment for each stock\n",
+    "    # 6: Calculate final investment for each stock\n",
     "    weightings_df['Final Investment'] = weightings_df['Adjusted Shares'] * weightings_df['Close Price'] + weightings_df['Adjusted fees']\n",
     "\n",
-    "    # Create Final Portfolio\n",
+    "    # 7: Create the final portfolio DataFrame\n",
     "    Portfolio_Final = pd.DataFrame()\n",
     "    Portfolio_Final['Ticker'] = weightings_df.index\n",
-    "    Portfolio_Final.index = Portfolio_Final['Ticker']\n",
+    "    Portfolio_Final.index = Portfolio_Final['Ticker']  # Use tickers as the index\n",
     "    Portfolio_Final['Price'] = weightings_df['Close Price']\n",
-    "    Portfolio_Final['Currency'] = 'CAD' # NEED TO FIGURE OUT A WAY TO GET ACCURATE CURRENCY DATA\n",
+    "    Portfolio_Final['Currency'] = 'CAD'\n",
     "    Portfolio_Final['Shares'] = weightings_df['Adjusted Shares']\n",
     "    Portfolio_Final['Value'] = weightings_df['Adjusted Investment Amt']\n",
     "    Portfolio_Final['Weight'] = weightings_df['Weight']\n",
     "\n",
+    "    # Reindex the final portfolio for cleaner display\n",
     "    Portfolio_Final.index = range(1, len(Portfolio_Final) + 1)\n",
     "\n",
     "    return Portfolio_Final\n",
     "\n",
     "weightings_df = pd.DataFrame()\n",
     "weightings_df.index = valid_tickers\n",
-    "weightings_df['Weight'] = [1.45, 4.45, 1.34, 4.26, 4.23, 1.54, 1.45, 2.70, 1.85, 3.54, 4.43, 3.19, 1.39, 2.51, 3.72, 3.44, 4.43, 1.34, 3.98, 1.37, 4.14, 3.80, 1.38, 4.17, 1.61, 2.51, 2.39, 1.34, 2.27, 1.34, 1.34, 1.65, 4.21, 3.63, 4.46, 3.10]\n",
+    "weightings_df['Weight'] = [2.78]*37\n",
     "\n",
-    "Portfolio_Final = buy_shares(weightings_df, close_prices.iloc[-1])\n",
-    "Portfolio_Final"
+    "close_prices = get_close_prices('2024-11-15', \"2024-11-22\", valid_tickers, \"2024-11-18\")\n",
+    "\n",
+    "# Generate the final portfolio\n",
+    "Portfolio_Final = buy_shares(weightings_df, close_prices.iloc[-1])"
    ]
   },
   {
@@ -669,25 +754,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_currency(tickers):\n",
-    "    currencies = []\n",
+    "#tests\n",
+    "total = Portfolio_Final['Value'].sum()\n",
+    "total_weight = Portfolio_Final['Weight'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_csv(portfolio_final):\n",
+    "    Stocks_Final = pd.DataFrame()\n",
+    "    Stocks_Final['Ticker'] = portfolio_final['Ticker']\n",
+    "    Stocks_Final.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "    for ticker in tickers:\n",
-    "        stock = yf.Ticker(ticker)\n",
-    "        info = stock.fast_info\n",
-    "        try:\n",
-    "            currency = info['currency']\n",
-    "        except:\n",
-    "            continue\n",
+    "    file_name = 'Stocks_Group_02.csv'\n",
+    "    Stocks_Final.to_csv(file_name, index=False)\n",
     "\n",
-    "        currencies.append({'Ticker': ticker, 'Currency': currency})\n",
-    "        \n",
-    "    df = pd.DataFrame(currencies)\n",
-    "    df.set_index('Ticker', inplace=True)\n",
+    "Final_Portfolio = generate_csv(Portfolio_Final)\n",
     "\n",
-    "    return df\n",
-    "\n",
-    "currencies = get_currency(valid_tickers)"
+    "print(\"Here is our final Portfolio\")\n",
+    "display(Portfolio_Final)\n",
+    "print(\"Total Portfolio Value: \", total, \"Total Portfolio Weight: \", total_weight, sep='')"
    ]
   }
  ],
