Fix some writing

--- a/Portfolio_Analyst.ipynb
+++ b/Portfolio_Analyst.ipynb
@@ -569,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we want to remove stocks that would not provide any value to a portfolio, either because they have too much risk without much return, or too much return without much risk. We only want stocks that have high risk with high returns, or low returns with low risk. This is with the assumption that there will be decent stocks after this filter that have varying amounts of correlation with each other."
+    "Now, we want to remove stocks that would not provide any value to a portfolio, either because they have too much risk without much return, or too much return with too much risk. We only want stocks that have high risk with high returns, or low returns with low risk. This is with the assumption that there will be decent stocks after this filter that have varying amounts of correlation with each other."
    ]
   },
   {
